--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "foundation": "zurb/bower-foundation#~5.2.3",
-    "trianglify": "~0.1.2"
+    "trianglify": "~0.1.2",
+    "handlebars": "~1.3.0"
   }
 }
