--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "gulp": "^3.8.0",
     "gulp-embedlr": "^0.5.2",
     "gulp-livereload": "^2.1.0",
+    "gulp-minify-css": "^0.3.4",
+    "gulp-replace": "^0.3.0",
     "gulp-sass": "^0.7.2",
-    "gulp-serve": "^0.2.0"
+    "gulp-serve": "^0.2.0",
+    "gulp-uglify": "^0.3.0"
   }
 }
