--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-replace": "^0.3.0",
     "gulp-sass": "^0.7.2",
     "gulp-serve": "^0.2.0",
-    "gulp-uglify": "^0.3.0"
+    "gulp-uglify": "^0.3.0",
+    "gulp-concat": "^2.2.0"
   }
 }
